--- a/Example/SlideToRevealImage/Base.lproj/Main.storyboard
+++ b/Example/SlideToRevealImage/Base.lproj/Main.storyboard
@@ -28,6 +28,22 @@
                                     <constraint firstAttribute="height" constant="200" id="7GB-ZI-teD"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0by-rN-sfk">
+                                <rect key="frame" x="168" y="305" width="39" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Clean"/>
+                                <connections>
+                                    <action selector="cleanView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Eeh-2h-FMz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LgH-Sy-nRG">
+                                <rect key="frame" x="172" y="350" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Init"/>
+                                <connections>
+                                    <action selector="initView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Tmm-44-nSV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
